# 22s-pa01-cout-this-one-hazel-endl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml
input/: temp.txt  test-bruteForce.txt  test-custom.txt  test.txt  test100-custom.txt  test100-highvalue.txt  test100.txt  test1000.txt
output/: test-bruteForce.txt  test-highvalue.txt
src/: Algorithm.cpp  Algorithm.h  Painting.cpp  Painting.h  Subset.cpp  Subset.h  main.cpp
